# PathPlanning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Algorithms/: Astar.cpp  Astar.h  Djikstra.cpp  Djikstra.h  Problem.cpp  Problem.h  Result.cpp  Result.h  Solver.cpp  Solver.h
Algorithms/Backwards/: BackwardsDijkstra.cpp  BackwardsDijkstra.h  BackwardsDjikstra.cpp  BackwardsDjikstra.h
Algorithms/Forward/: Astar.cpp  Astar.h  BackwardsDjikstra.h  Dijkstra.cpp  Djikstra.cpp
Graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h  OrientedGraph.cpp  UnorientedGraph.cpp
assets/: 2dgraph.graph  hall.terrain2d  simple.geograph  simple.graph
core/: PathPlanning.h
core/Algorithms/: GenericProblem.cpp  GenericProblem.h  Result.cpp  Result.h  Solver.h
core/Algorithms/PathFinder/: Bug1.cpp  Bug1.h  PathFinderProblem.cpp  PathFinderProblem.h  PathFinderResult.cpp  PathFinderResult.h  RTT.cpp  RTT.h
core/Algorithms/ShortestPath/: ShortestPathProblem.cpp  ShortestPathProblem.h  ShortestPathResult.cpp  ShortestPathResult.h
core/Algorithms/ShortestPath/Backwards/: BackwardsDijkstra.cpp  BackwardsDijkstra.h
core/Algorithms/ShortestPath/Forwards/: Astar.cpp  Astar.h  Dijkstra.cpp  Dijkstra.h
core/Drone/: Location.cpp  Location.h
core/Graph/: Edge.cpp  Graph.h  Node.cpp  Node.h  OrientedGraph.h  UnorientedGraph.cpp  UnorientedGraph.h
core/Path/: Path.cpp  Path.h  PathUnit.cpp  PathUnit.h
core/Terrain/: BoundingBox.cpp  BoundingBox.h  BoundingBox2d.cpp  BoundingBox2d.h  BoundingBox3d.cpp  BoundingBox3d.h  Box.cpp  Box.h  Box2d.cpp  Box2d.h  Box3d.cpp  Box3d.h  Obstacle.cpp  Obstacle.h  Obstacle2d.cpp  Obstacle2d.h  Obstacle3d.cpp  Obstacle3d.h  Surface2d.cpp  Surface2d.h  Terrain.cpp  Terrain.h  Terrain2d.cpp  Terrain2d.h  Terrain3d.cpp  Terrain3d.h
core/utils/: GraphReader.h  Point2d.cpp  Point2d.h  Types.cpp  Types.h
core/utils/Geometry/: GenericPoint.cpp  GenericPoint.h  Point2d.cpp  Point2d.h  Point3d.cpp  Point3d.h  PointNd.cpp  PointNd.h
include/freetype/: README.md
include/glfw-3.2.1/src/: context.c  glx_context.c
include/glfw-3.2.1/tests/: vulkan.c
include/gltt-2.5.2/: FTBitmapFont.C  FTBitmapFont.h  FTEngine.C  FTEngine.h  FTFace.C  FTFace.h  FTFont.C  FTFont.h  FTGlyph.C  FTGlyph.h  FTGlyphBitmap.C  FTGlyphBitmap.h  FTGlyphPixmap.C  FTGlyphPixmap.h  FTGlyphVectorizer.C  FTGlyphVectorizer.h  FTInstance.C  FTInstance.h  FTPixmapFont.C  FTPixmapFont.h  GLTTBitmapFont.C  GLTTBitmapFont.h  GLTTFont.C  GLTTFont.h  GLTTGlyphPolygonizer.C  GLTTGlyphPolygonizer.h  GLTTGlyphPolygonizerHandler.C  GLTTGlyphPolygonizerHandler.h  GLTTGlyphTriangulator.C  GLTTGlyphTriangulator.h  GLTTOutlineFont.C  GLTTOutlineFont.h  GLTTPixmapFont.C  GLTTPixmapFont.h  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  (+7 more)
tasks/: Global.cpp  Global.h
utils/: GraphReader.cpp  GraphReader.h  Types.h
visualization/: DataBinder.cpp  DataBinder.h  Launcher.cpp  Launcher.h  Primitives.cpp  Primitives.h  VisualizationLauncher.cpp  VisualizationLauncher.h  Window.cpp  Window.h
